// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button should return a Button 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';
  background: transparent;
  border: none;
  color: #000000;
  padding: 0.30000000000000004rem 0.8rem;
  -webkit-transition: all 200ms cubic-bezier(0.4,0,0.2,1);
  transition: all 200ms cubic-bezier(0.4,0,0.2,1);
  cursor: pointer;
  background: #3B74F3;
  color: #ffffff;
  border-radius: 8px;
  font-size: 1rem;
  line-height: 1.5rem;
}

.c0:not([disabled]):active {
  -webkit-transform: scale(0.92);
  -ms-transform: scale(0.92);
  transform: scale(0.92);
}

.c0:hover {
  background: #437cfb;
}

.c0:disabled {
  background-color: rgba(0,0,0,0.12);
}

.c0:disabled {
  color: rgba(0,0,0,0.25);
  cursor: not-allowed;
  background-color: rgba(0,0,0,0.12);
}

<button
  className="c0"
  disabled={false}
  shape="SemiRound"
  size="Medium"
/>
`;

exports[`button should return a Button with children 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';
  background: transparent;
  border: none;
  color: #000000;
  padding: 0.30000000000000004rem 0.8rem;
  -webkit-transition: all 200ms cubic-bezier(0.4,0,0.2,1);
  transition: all 200ms cubic-bezier(0.4,0,0.2,1);
  cursor: pointer;
  background: #3B74F3;
  color: #ffffff;
  border-radius: 8px;
  font-size: 1rem;
  line-height: 1.5rem;
}

.c0:not([disabled]):active {
  -webkit-transform: scale(0.92);
  -ms-transform: scale(0.92);
  transform: scale(0.92);
}

.c0:hover {
  background: #437cfb;
}

.c0:disabled {
  background-color: rgba(0,0,0,0.12);
}

.c0:disabled {
  color: rgba(0,0,0,0.25);
  cursor: not-allowed;
  background-color: rgba(0,0,0,0.12);
}

<button
  className="c0"
  disabled={false}
  shape="SemiRound"
  size="Medium"
>
  Button
</button>
`;

exports[`button should return a Button with disabled 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';
  background: transparent;
  border: none;
  color: #000000;
  padding: 0.30000000000000004rem 0.8rem;
  -webkit-transition: all 200ms cubic-bezier(0.4,0,0.2,1);
  transition: all 200ms cubic-bezier(0.4,0,0.2,1);
  cursor: pointer;
  background: #3B74F3;
  color: #ffffff;
  border-radius: 8px;
  font-size: 1rem;
  line-height: 1.5rem;
}

.c0:not([disabled]):active {
  -webkit-transform: scale(0.92);
  -ms-transform: scale(0.92);
  transform: scale(0.92);
}

.c0:hover {
  background: #437cfb;
}

.c0:disabled {
  background-color: rgba(0,0,0,0.12);
}

.c0:disabled {
  color: rgba(0,0,0,0.25);
  cursor: not-allowed;
  background-color: rgba(0,0,0,0.12);
}

<button
  className="c0"
  disabled={true}
  shape="SemiRound"
  size="Medium"
>
  Button
</button>
`;

exports[`button should return a Dashed Button 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';
  background: transparent;
  border: none;
  color: #000000;
  padding: 0.30000000000000004rem 0.8rem;
  -webkit-transition: all 200ms cubic-bezier(0.4,0,0.2,1);
  transition: all 200ms cubic-bezier(0.4,0,0.2,1);
  cursor: pointer;
  border-style: dashed;
  border-width: 1px;
  border-color: #3B74F3;
  color: #3B74F3;
  border-radius: 8px;
  font-size: 1rem;
  line-height: 1.5rem;
}

.c0:not([disabled]):active {
  -webkit-transform: scale(0.92);
  -ms-transform: scale(0.92);
  transform: scale(0.92);
}

.c0:hover {
  background: #f5f5f515;
}

.c0:disabled {
  border-color: rgba(0,0,0,0.12);
}

.c0:disabled {
  color: rgba(0,0,0,0.25);
  cursor: not-allowed;
  background-color: rgba(0,0,0,0.12);
}

<button
  className="c0"
  disabled={false}
  shape="SemiRound"
  size="Medium"
>
  Button
</button>
`;

exports[`button should return a Large Button 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';
  background: transparent;
  border: none;
  color: #000000;
  padding: 0.30000000000000004rem 0.8rem;
  -webkit-transition: all 200ms cubic-bezier(0.4,0,0.2,1);
  transition: all 200ms cubic-bezier(0.4,0,0.2,1);
  cursor: pointer;
  background: #3B74F3;
  color: #ffffff;
  border-radius: 8px;
  font-size: 1.125rem;
  line-height: 1.75rem;
}

.c0:not([disabled]):active {
  -webkit-transform: scale(0.92);
  -ms-transform: scale(0.92);
  transform: scale(0.92);
}

.c0:hover {
  background: #437cfb;
}

.c0:disabled {
  background-color: rgba(0,0,0,0.12);
}

.c0:disabled {
  color: rgba(0,0,0,0.25);
  cursor: not-allowed;
  background-color: rgba(0,0,0,0.12);
}

<button
  className="c0"
  disabled={false}
  shape="SemiRound"
  size="Large"
>
  Button
</button>
`;

exports[`button should return a Medium Button 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';
  background: transparent;
  border: none;
  color: #000000;
  padding: 0.30000000000000004rem 0.8rem;
  -webkit-transition: all 200ms cubic-bezier(0.4,0,0.2,1);
  transition: all 200ms cubic-bezier(0.4,0,0.2,1);
  cursor: pointer;
  background: #3B74F3;
  color: #ffffff;
  border-radius: 8px;
  font-size: 1rem;
  line-height: 1.5rem;
}

.c0:not([disabled]):active {
  -webkit-transform: scale(0.92);
  -ms-transform: scale(0.92);
  transform: scale(0.92);
}

.c0:hover {
  background: #437cfb;
}

.c0:disabled {
  background-color: rgba(0,0,0,0.12);
}

.c0:disabled {
  color: rgba(0,0,0,0.25);
  cursor: not-allowed;
  background-color: rgba(0,0,0,0.12);
}

<button
  className="c0"
  disabled={false}
  shape="SemiRound"
  size="Medium"
>
  Button
</button>
`;

exports[`button should return a Outline Button 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';
  background: transparent;
  border: none;
  color: #000000;
  padding: 0.30000000000000004rem 0.8rem;
  -webkit-transition: all 200ms cubic-bezier(0.4,0,0.2,1);
  transition: all 200ms cubic-bezier(0.4,0,0.2,1);
  cursor: pointer;
  border-style: solid;
  border-width: 1px;
  border-color: #3B74F3;
  color: #3B74F3;
  border-radius: 8px;
  font-size: 1rem;
  line-height: 1.5rem;
}

.c0:not([disabled]):active {
  -webkit-transform: scale(0.92);
  -ms-transform: scale(0.92);
  transform: scale(0.92);
}

.c0:hover {
  border-color: #437cfb;
  color: #437cfb;
  background: #437cfb06;
}

.c0:disabled {
  border-color: rgba(0,0,0,0.12);
}

.c0:disabled {
  color: rgba(0,0,0,0.25);
  cursor: not-allowed;
  background-color: rgba(0,0,0,0.12);
}

<button
  className="c0"
  disabled={false}
  shape="SemiRound"
  size="Medium"
>
  Button
</button>
`;

exports[`button should return a Rectangle Button 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';
  background: transparent;
  border: none;
  color: #000000;
  padding: 0.30000000000000004rem 0.8rem;
  -webkit-transition: all 200ms cubic-bezier(0.4,0,0.2,1);
  transition: all 200ms cubic-bezier(0.4,0,0.2,1);
  cursor: pointer;
  background: #3B74F3;
  color: #ffffff;
  border-radius: 4px;
  font-size: 1rem;
  line-height: 1.5rem;
}

.c0:not([disabled]):active {
  -webkit-transform: scale(0.92);
  -ms-transform: scale(0.92);
  transform: scale(0.92);
}

.c0:hover {
  background: #437cfb;
}

.c0:disabled {
  background-color: rgba(0,0,0,0.12);
}

.c0:disabled {
  color: rgba(0,0,0,0.25);
  cursor: not-allowed;
  background-color: rgba(0,0,0,0.12);
}

<button
  className="c0"
  disabled={false}
  shape="Rectangle"
  size="Medium"
>
  Button
</button>
`;

exports[`button should return a Round Button 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';
  background: transparent;
  border: none;
  color: #000000;
  padding: 0.30000000000000004rem 0.8rem;
  -webkit-transition: all 200ms cubic-bezier(0.4,0,0.2,1);
  transition: all 200ms cubic-bezier(0.4,0,0.2,1);
  cursor: pointer;
  background: #3B74F3;
  color: #ffffff;
  border-radius: 12px;
  font-size: 1rem;
  line-height: 1.5rem;
}

.c0:not([disabled]):active {
  -webkit-transform: scale(0.92);
  -ms-transform: scale(0.92);
  transform: scale(0.92);
}

.c0:hover {
  background: #437cfb;
}

.c0:disabled {
  background-color: rgba(0,0,0,0.12);
}

.c0:disabled {
  color: rgba(0,0,0,0.25);
  cursor: not-allowed;
  background-color: rgba(0,0,0,0.12);
}

<button
  className="c0"
  disabled={false}
  shape="Round"
  size="Medium"
>
  Button
</button>
`;

exports[`button should return a SemiRound Button 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';
  background: transparent;
  border: none;
  color: #000000;
  padding: 0.30000000000000004rem 0.8rem;
  -webkit-transition: all 200ms cubic-bezier(0.4,0,0.2,1);
  transition: all 200ms cubic-bezier(0.4,0,0.2,1);
  cursor: pointer;
  background: #3B74F3;
  color: #ffffff;
  border-radius: 8px;
  font-size: 1rem;
  line-height: 1.5rem;
}

.c0:not([disabled]):active {
  -webkit-transform: scale(0.92);
  -ms-transform: scale(0.92);
  transform: scale(0.92);
}

.c0:hover {
  background: #437cfb;
}

.c0:disabled {
  background-color: rgba(0,0,0,0.12);
}

.c0:disabled {
  color: rgba(0,0,0,0.25);
  cursor: not-allowed;
  background-color: rgba(0,0,0,0.12);
}

<button
  className="c0"
  disabled={false}
  shape="SemiRound"
  size="Medium"
>
  Button
</button>
`;

exports[`button should return a Small Button 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';
  background: transparent;
  border: none;
  color: #000000;
  padding: 0.30000000000000004rem 0.8rem;
  -webkit-transition: all 200ms cubic-bezier(0.4,0,0.2,1);
  transition: all 200ms cubic-bezier(0.4,0,0.2,1);
  cursor: pointer;
  background: #3B74F3;
  color: #ffffff;
  border-radius: 8px;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.c0:not([disabled]):active {
  -webkit-transform: scale(0.92);
  -ms-transform: scale(0.92);
  transform: scale(0.92);
}

.c0:hover {
  background: #437cfb;
}

.c0:disabled {
  background-color: rgba(0,0,0,0.12);
}

.c0:disabled {
  color: rgba(0,0,0,0.25);
  cursor: not-allowed;
  background-color: rgba(0,0,0,0.12);
}

<button
  className="c0"
  disabled={false}
  shape="SemiRound"
  size="Small"
>
  Button
</button>
`;

exports[`button should return a Text Button 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';
  background: transparent;
  border: none;
  color: #000000;
  padding: 0.30000000000000004rem 0.8rem;
  -webkit-transition: all 200ms cubic-bezier(0.4,0,0.2,1);
  transition: all 200ms cubic-bezier(0.4,0,0.2,1);
  cursor: pointer;
  color: #3B74F3;
  border-radius: 8px;
  font-size: 1rem;
  line-height: 1.5rem;
}

.c0:not([disabled]):active {
  -webkit-transform: scale(0.92);
  -ms-transform: scale(0.92);
  transform: scale(0.92);
}

.c0:hover {
  background: #437cfb15;
}

.c0:disabled {
  background: none;
}

.c0:disabled {
  color: rgba(0,0,0,0.25);
  cursor: not-allowed;
  background-color: rgba(0,0,0,0.12);
}

<button
  className="c0"
  disabled={false}
  shape="SemiRound"
  size="Medium"
>
  Button
</button>
`;

exports[`button should return a danger Button 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';
  background: transparent;
  border: none;
  color: #000000;
  padding: 0.30000000000000004rem 0.8rem;
  -webkit-transition: all 200ms cubic-bezier(0.4,0,0.2,1);
  transition: all 200ms cubic-bezier(0.4,0,0.2,1);
  cursor: pointer;
  background: #3B74F3;
  color: #ffffff;
  background: #ff0e0e;
  border-radius: 8px;
  font-size: 1rem;
  line-height: 1.5rem;
}

.c0:not([disabled]):active {
  -webkit-transform: scale(0.92);
  -ms-transform: scale(0.92);
  transform: scale(0.92);
}

.c0:hover {
  background: #437cfb;
}

.c0:disabled {
  background-color: rgba(0,0,0,0.12);
}

.c0:hover {
  background: #ff1616;
}

.c0:disabled {
  color: rgba(0,0,0,0.25);
  cursor: not-allowed;
  background-color: rgba(0,0,0,0.12);
}

<button
  className="c0"
  disabled={false}
  shape="SemiRound"
  size="Medium"
>
  Button
</button>
`;

exports[`button should return a success Button 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';
  background: transparent;
  border: none;
  color: #000000;
  padding: 0.30000000000000004rem 0.8rem;
  -webkit-transition: all 200ms cubic-bezier(0.4,0,0.2,1);
  transition: all 200ms cubic-bezier(0.4,0,0.2,1);
  cursor: pointer;
  background: #3B74F3;
  color: #ffffff;
  background: #00AB66;
  border-radius: 8px;
  font-size: 1rem;
  line-height: 1.5rem;
}

.c0:not([disabled]):active {
  -webkit-transform: scale(0.92);
  -ms-transform: scale(0.92);
  transform: scale(0.92);
}

.c0:hover {
  background: #437cfb;
}

.c0:disabled {
  background-color: rgba(0,0,0,0.12);
}

.c0:hover {
  background: #8b36e;
}

.c0:disabled {
  color: rgba(0,0,0,0.25);
  cursor: not-allowed;
  background-color: rgba(0,0,0,0.12);
}

<button
  className="c0"
  disabled={false}
  shape="SemiRound"
  size="Medium"
>
  Button
</button>
`;
